# rust-bundler

./: Cargo.toml
src/: lib.rs  main.rs
