[package]
name = "bundler"
version = "0.1.1"
authors = ["Slava Shklyaev <slava@slava.sh>"]
description = "Creates a single-source-file version of a Cargo package."
documentation = "https://docs.rs/bundler"
homepage = "https://github.com/slava-sh/rust-bundler"
repository = "https://github.com/slava-sh/rust-bundler"
keywords = ["single-file", "bundle", "merge", "expand", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"
license = "MIT"

[badges]
travis-ci = { repository = "slava-sh/rust-bundler" }
codecov = { repository = "slava-sh/rust-bundler" }

[[bin]]
name = "bundle"
path = "src/main.rs"

[dependencies]
cargo_metadata = "0.15"
clap = { version = "4.0", features = ["derive"] }
quote = "1.0"
syn = { version = "1.0", features = ["visit-mut", "printing"] }

[dev-dependencies]
assert_cli = "0.6"
goldenfile = "1.4"
